--- a/project_name/templates/partials/_header.html
+++ b/project_name/templates/partials/_header.html
@@ -36,14 +36,17 @@
                 <ul class="navbar-nav mr-auto">
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/logout">Salir</a>
+                        <a class="nav-link" href="registration/logout">Salir</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Hola, {{user.username}}</a>
                     </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="/admin">Login</a>
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'register' %}">Register</a>
                         </li>
                     {% endif %}
                 </ul>
