--- a/project_name/templates/registration/registro.html
+++ b/project_name/templates/registration/registro.html
@@ -1,18 +1,18 @@
 {% include "base.html" %} 
-{% load crispy_forms_tags %}
 {% block content %} 
-
+{% load crispy_forms_tags %}
 <!--Registro-->
 <div class="container py-5">
- <h1>Registro</h1>
- <form method="POST">
- {% csrf_token %} {{ register_form|crispy }}
- <button class="btn btn-primary" type="submit">Register</button>
- </form>
- <p class="text-center">
- Si tienes actualmente una cuenta, inicie su sesión en
- <a href="/login">login</a>.
- </p>
+    <h1>Registro</h1>
+    <form method="POST">
+        {% csrf_token %} 
+        {{ register_form|crispy }}
+        <button class="btn btn-primary" type="submit">Register</button>
+    </form>
+    <p class="text-center">
+        Si tienes actualmente una cuenta, inicie su sesión en
+        <a href="/login">login</a>.
+    </p>
 </div>
 
 {% endblock %}
