Models to registration and contact was create successfuly

--- a/project_name/templates/registration/registro.html
+++ b/project_name/templates/registration/registro.html
@@ -1,17 +1,33 @@
-{% include "base.html" %} 
+{% extends "base.html" %} 
 {% block content %} 
 {% load crispy_forms_tags %}
+<br><br>
 <!--Registro-->
-<div class="container py-5">
+<div class="container border p-3 mb-3 bg-light text-dark">
     <h1>Registro</h1>
+</div>
+<div class="container border p-3 mb-3 bg-light text-dark">
     <form method="POST">
         {% csrf_token %} 
-        {{ register_form|crispy }}
+        <div class="form-group row mt-8">
+            <div class="col-md-6 mb-0">
+                {{ register_form.username|as_crispy_field }}
+            </div>
+            <div class="col-md-6 mb-0">
+                {{ register_form.email|as_crispy_field }}
+            </div>
+        </div>
+        <div class="form-group row mt-8">
+            {{ register_form.password1|as_crispy_field }}
+        </div>
+        <div class="form-group row mt-8">
+            {{ register_form.password2|as_crispy_field }}
+        </div>
         <button class="btn btn-primary" type="submit">Register</button>
     </form>
     <p class="text-center">
         Si tienes actualmente una cuenta, inicie su sesión en
-        <a href="/login">login</a>.
+        <a href="{% url 'login' %}">login</a>.
     </p>
 </div>
 
