--- a/data_science/templates/index.html
+++ b/data_science/templates/index.html
@@ -6,14 +6,14 @@
         <div class="container p-3 text-center text-white">
             <div class="row">
                 <div class="col col-sm-8 col-xs-12">
-                    <h1 class="mb-3 display-4 mt-5">Proyecto Vehiculos</h1>
+                    <h1 class="mb-3 display-4 mt-5">Data Science Project with Python</h1>
                 </div>
                 <div class="col">
                      <img class="rounded-circle" style="width: auto; height: 195px; padding-left: 0px;  padding-right: 0px; margin-top: 10px;" src="https://portfolio-mparraf.herokuapp.com/static/img/favicon.ico" alt="brand image" />
                 </div>
             </div>
             <div class="row">
-                <p class="d-none d-sm-block show-read-more p-3 mt-5">Here a description of this project</p>
+                <p class="d-none d-sm-block show-read-more p-3 mt-5">This project contains the source code and related files for resolving data science problems using Python. Explore external libraries how as Pandas, Matplotlib, Numpy, and others.</p>
             </div>
         </div>
     </div>
