--- a/data_science/templates/overtime_result.html
+++ b/data_science/templates/overtime_result.html
@@ -1,5 +1,5 @@
   <!-- overtime_app/templates/overtime_app/overtime_result.html -->
   <h2>Overtime Pay</h2>
-  <p>Total Pay: ${{ overtime_pay|floatformat:2 }}</p>
+  <p>Total Pay: ${{ employee.calculate_overtime_pay|floatformat:2 }}</p>
 
 
