It was added exercise with dataframe, using idxmax() abs() function. Also was include a exercise to used dataframe Series

--- a/data_science/templates/pandas/data-cleaning.html
+++ b/data_science/templates/pandas/data-cleaning.html
@@ -17,7 +17,7 @@
             <div class="portfolio-box-caption">
                 <h1>Data Cleaning with Pandas Library</h1>
                 <hr>
-                <div class="container">
+                <div class="container border" style="background-color: aliceblue;">
 
                 </div>
                 <hr>
