Use the matplotlib built-in function plot() to visualize the relationship between Energy Supply per Capita and Citable Documents per Capita. Install the matplotlib, BytesIO, & base64  library in your virtual environment and include the necessary import statement in the file's header.

--- a/data_science/templates/pandas/data-cleaning.html
+++ b/data_science/templates/pandas/data-cleaning.html
@@ -26,6 +26,9 @@
                         {{ data|safe }}
                     </div>
                 </div>
+                <div class="container">
+                    <img src="data:image/png;base64,{{ graphic }}" alt="Graph">
+                </div>
             </div>
         </div>
     </div>
