It was finished aplication thar read excel files and use of dataframe to processing and generate visualization with matplolib

--- a/data_science/templates/pandas/data-cleaning.html
+++ b/data_science/templates/pandas/data-cleaning.html
@@ -27,7 +27,8 @@
                     </div>
                 </div>
                 <div class="container">
-                    <img src="data:image/png;base64,{{ graphic }}" alt="Graph">
+                    <img src="data:image/png;base64,{{ graphic }}" alt="Graph1">
+                    <img src="data:image/png;base64,{{ graphic2 }}" alt="Graph2">
                 </div>
             </div>
         </div>
